<resources>
    <string name="app_name">CarWashMap</string>
    <string name="enter">Войти</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="registration">Регистрация</string>
    <string name="register_enter">Зарегестрироваться и войти!</string>
    <string name="service_name">Название сервиса</string>
    <string name="service_address">Адрес сервиса</string>
    <string name="entry_service">Запись в сервис</string>
    <string name="price">Стоимость</string>
    <string name="work_name">Наименование работ</string>
    <string name="auto">Автомобиль</string>
    <string name="time">Время</string>
    <string name="date">Дата</string>
</resources>